--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"php": ">=5.3",
 		"symfony/http-foundation": ">=2.2.0",
 		"lcobucci/di-builder": ">=1.0.0",
-		"doctrine/common": ">=2.3.0"
+		"doctrine/cache": "*@dev",
+		"doctrine/common": ">=2.3.0@dev"
 	},
 	"autoload": {
 		"psr-0": {
