--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 		"symfony/http-foundation" : ">=2.2.0",
 		"lcobucci/di-builder" : ">=1.0.0",
 		"php" : ">=5.3",
-		"doctrine/common" : ">=2.3.0@dev",
+		"doctrine/annotations" : "*@dev",
 		"doctrine/cache" : "*@dev"
 	},
 	"require-dev" : {
