--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,18 @@
 language: php
+
 php:
   - 5.3
   - 5.4
   - 5.5
+  - 5.6
+  - hhvm
+  - hhvm-nightly
 before_script:
   - composer selfupdate
-  - composer install --prefer-dist
+  - composer install --dev --prefer-dist
+
+matrix:
+  allow_failures:
+    - php: hhvm
+    - php: hhvm-nightly
+
