--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	"require" : {
 		"php" : ">=5.3",
 		"symfony/http-foundation" : "~2.4",
-		"lcobucci/di-builder" : ">=1.0.0",
+		"lcobucci/di-builder" : "*@dev",
 		"doctrine/annotations" : "*@dev",
 		"doctrine/cache" : "*@dev",
 		"psr/log" : "~1.0"
