--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name" : "lcobucci/action-mapper",
-	"description" : "Front controller framework for PHP 5.3+ applications",
+	"description" : "Front controller framework for PHP 5.5+ applications",
 	"type" : "library",
 	"authors" : [{
 			"name" : "Luís Otávio Cobucci Oblonczyk",
@@ -15,21 +15,20 @@
 		"BSD-3-Clause"
 	],
 	"require" : {
-		"php" : ">=5.3",
-		"symfony/http-foundation" : "~2.4",
-		"lcobucci/di-builder" : "~2.0",
+		"php" : ">=5.5",
+		"symfony/http-foundation" : "~2.5",
+		"lcobucci/di-builder" : "~3.0",
 		"doctrine/annotations" : "*@dev",
 		"doctrine/cache" : "*@dev",
 		"psr/log" : "~1.0"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "*",
-		"squizlabs/php_codesniffer" : "*",
-		"phpmd/phpmd" : "*"
+		"phpunit/phpunit" : "~4.2",
+		"squizlabs/php_codesniffer" : "*"
 	},
 	"autoload" : {
-		"psr-0" : {
-			"Lcobucci\\ActionMapper2" : "src/"
+		"psr-4" : {
+			"Lcobucci\\ActionMapper2\\" : ["src", "test"]
 		}
 	}
 }
