--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 	},
 	"autoload" : {
 		"psr-4" : {
-			"Lcobucci\\ActionMapper2\\" : ["src", "test"]
+			"Lcobucci\\ActionMapper\\" : ["src", "test"]
 		}
 	}
 }
